--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: java
 jdk:
 - oraclejdk8
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
-script: 
-  - '[ ${TRAVIS_PULL_REQUEST} = ''false'' -a ${TRAVIS_BRANCH} = ''master'' ] && (cd powerunit && mvn clean install site -Psite --settings ../target/travis/settings.xml) || echo ''Ignore'' '
-  - '[ ${TRAVIS_PULL_REQUEST} = ''false'' -a ${TRAVIS_BRANCH} != ''master'' ] && (cd powerunit && mvn clean install --settings ../target/travis/settings.xml) || echo ''Ignore'' '
+script:
+- "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && (cd powerunit-extensions-matchers
+  && mvn clean install site -Psite --settings ../target/travis/settings.xml) || echo
+  'Ignore' "
+- "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} != 'master' ] && (cd powerunit-extensions-matchers
+  && mvn clean install --settings ../target/travis/settings.xml) || echo 'Ignore' "
+env:
+  global:
+    secure: bixObEPUucDS5bf27jfRrmAQjHQEAq+pUwYGt9KgtIn6x+tkPP2bXc3d1Ub3PJkvp96tg7y/3RBEnPysqHAtChTUORf1xxCcrEtzSOnYec2e2Wv3wyszf9PwlWzeq57QyJTSsSpbyvuo5rf61YttR+PwEn3sl9qlHPrs8FMUjOA=
