--- a/powerunit-extensions-matchers/pom.xml
+++ b/powerunit-extensions-matchers/pom.xml
@@ -310,6 +310,7 @@
 				<configuration>
 					<source>${java.source.version}</source>
 					<target>${java.target.version}</target>
+					<compilerArgument>-Ach.powerunit.extensions.matchers.factoryprocessor.FactoryAnnotationsProcessor.targets=.*:ch.powerunit.extensions.matchers.samples.AllMatchers</compilerArgument>
 				</configuration>
 				<executions>
 					<execution>
@@ -470,7 +471,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.5</version>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -493,9 +494,15 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-all</artifactId>
+			<version>${hamcrest.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>ch.powerunit</groupId>
 			<artifactId>powerunit</artifactId>
 			<version>${powerunit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
