--- a/powerunit-extensions-matchers/pom.xml
+++ b/powerunit-extensions-matchers/pom.xml
@@ -76,6 +76,11 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.9</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
@@ -462,11 +467,6 @@
 						</reports>
 					</reportSet>
 				</reportSets>
-				<configuration>
-					<reportsDirectories>
-						<reportsDirectory>${project.build.directory}/base-surefire-reports</reportsDirectory>
-					</reportsDirectories>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -482,10 +482,6 @@
 						<reports>
 							<report>report</report>
 						</reports>
-						<configuration>
-							<dataFile>${project.build.directory}/jacoco-overall.exec</dataFile>
-							<outputDirectory>${project.reporting.outputDirectory}/jacoco-overall</outputDirectory>
-						</configuration>
 					</reportSet>
 				</reportSets>
 			</plugin>
