--- a/powerunit-extensions-matchers/pom.xml
+++ b/powerunit-extensions-matchers/pom.xml
@@ -282,6 +282,7 @@
 					<execution>
 						<goals>
 							<goal>jar</goal>
+							<goal>test-jar</goal>
 						</goals>
 					</execution>
 				</executions>
