#20 Prepare basic element of the archetype

--- a/powerunit-extensions-matchers/pom.xml
+++ b/powerunit-extensions-matchers/pom.xml
@@ -131,6 +131,11 @@
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>3.0.0</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-archetype-plugin</artifactId>
+					<version>3.0.1</version>
+				</plugin>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
@@ -336,6 +341,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<escapeString>\</escapeString>
+				</configuration>
 				<executions>
 					<execution>
 						<id>Manual copy of processor</id>
@@ -400,6 +408,21 @@
 										</fileMapper>
 									</fileMappers>
 								</transformationSet>
+								<transformationSet>
+									<dir>${basedir}</dir>
+									<outputDir>${project.build.directory}</outputDir>
+									<includes>
+										<include>pom.xml</include>
+									</includes>
+									<stylesheet>src/main/xslt/archetype.xsl</stylesheet>
+									<fileMappers>
+										<fileMapper
+											implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
+											<pattern>.xml$</pattern>
+											<replacement>-archetype.xml</replacement>
+										</fileMapper>
+									</fileMappers>
+								</transformationSet>
 							</transformationSets>
 						</configuration>
 					</execution>
@@ -434,6 +457,49 @@
 							</descriptors>
 							<attach>false</attach>
 						</configuration>
+					</execution>
+					<execution>
+						<id>archetype</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						<configuration>
+							<descriptors>
+								<descriptor>src/assemble/archetype.xml</descriptor>
+							</descriptors>
+							<attach>false</attach>
+							<escapeString>\</escapeString>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>install archetype</id>
+						<phase>install</phase>
+						<goals>
+							<goal>install-file</goal>
+						</goals>
+						<configuration>
+							<file>${project.build.directory}/${project.artifactId}-${project.version}-archetype.jar</file>
+							<artifactId>${project.artifactId}-archetype</artifactId>
+							<groupId>${project.groupId}</groupId>
+							<pomFile>${project.build.directory}/pom-archetype.xml</pomFile>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-archetype-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>update-local-catalog</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -527,6 +593,23 @@
 									<artifactId>${project.artifactId}-factory</artifactId>
 									<groupId>${project.groupId}</groupId>
 									<pomFile>${project.build.directory}/pom-only-factory.xml</pomFile>
+									<repositoryId>${deploy.id}</repositoryId>
+									<javadoc>${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar</javadoc>
+									<sources>${project.build.directory}/${project.artifactId}-${project.version}-sources.jar</sources>
+								</configuration>
+							</execution>
+							<execution>
+								<id>sign-and-deploy-archetype</id>
+								<phase>deploy</phase>
+								<goals>
+									<goal>sign-and-deploy-file</goal>
+								</goals>
+								<configuration>
+									<url>${deploy.url}</url>
+									<file>${project.build.directory}/${project.artifactId}-${project.version}-archetype.jar</file>
+									<artifactId>${project.artifactId}-archetype</artifactId>
+									<groupId>${project.groupId}</groupId>
+									<pomFile>${project.build.directory}/pom-archetype.xml</pomFile>
 									<repositoryId>${deploy.id}</repositoryId>
 									<javadoc>${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar</javadoc>
 									<sources>${project.build.directory}/${project.artifactId}-${project.version}-sources.jar</sources>
