--- a/powerunit-extensions-matchers/src/main/archetype/archetype-resources/pom.xml
+++ b/powerunit-extensions-matchers/src/main/archetype/archetype-resources/pom.xml
@@ -1,14 +1,64 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
- 
-  <groupId>\${groupId}</groupId>
-  <artifactId>\${artifactId}</artifactId>
-  <version>\${version}</version>
-  <packaging>jar</packaging>
- 
- 
-  <dependencies>
-    
-  </dependencies>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>\${groupId}</groupId>
+	<artifactId>\${artifactId}</artifactId>
+	<version>\${version}</version>
+	<packaging>jar</packaging>
+
+	<properties>
+		<java.source.version>1.8</java.source.version>
+		<java.target.version>1.8</java.target.version>
+		<powerunit.version>${powerunit.version}</powerunit.version>
+		<powerunit.extension.matcher.version>${version}</powerunit.extension.matcher.version>
+		<surefire.version>${surefire.version}</surefire.version>
+	</properties>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>\${surefire.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>ch.powerunit</groupId>
+							<artifactId>powerunit</artifactId>
+							<version>\${powerunit.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.source.version}</source>
+					<target>${java.target.version}</target>
+					<compilerArgs>
+						<compilerArg>-Ach.powerunit.extensions.matchers.factoryprocessor.FactoryAnnotationsProcessor.targets=.*:\${package}.AllMatchers</compilerArg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>${groupId}</groupId>
+			<artifactId>${artifactId}</artifactId>
+			<version>\${powerunit.extension.matcher.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.powerunit</groupId>
+			<artifactId>powerunit</artifactId>
+			<version>\${powerunit.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 </project>
