--- a/powerunit-extensions-matchers/src/main/archetype/archetype-resources/pom.xml
+++ b/powerunit-extensions-matchers/src/main/archetype/archetype-resources/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<!-- Java 8 at least if required -->
+		<!-- Java 8 at least is required -->
 		<java.source.version>1.8</java.source.version>
 		<java.target.version>1.8</java.target.version>
 		<powerunit.extension.matcher.version>${version}</powerunit.extension.matcher.version>
