--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ jdk:
 sudo: false
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
 script:
-- "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && (cd powerunit-extensions-matchers && mvn clean install site -Psite --settings ../target/travis/settings.xml) || (cd powerunit-extensions-matchers && mvn clean install --settings ../target/travis/settings.xml) "
+- "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && (cd powerunit-extensions-matchers
+  && mvn clean install site -Psite --settings ../target/travis/settings.xml) || (cd
+  powerunit-extensions-matchers && mvn clean install --settings ../target/travis/settings.xml) "
 env:
   global:
-    secure: bixObEPUucDS5bf27jfRrmAQjHQEAq+pUwYGt9KgtIn6x+tkPP2bXc3d1Ub3PJkvp96tg7y/3RBEnPysqHAtChTUORf1xxCcrEtzSOnYec2e2Wv3wyszf9PwlWzeq57QyJTSsSpbyvuo5rf61YttR+PwEn3sl9qlHPrs8FMUjOA=
+    secure: micrjSRaEhZIKRIkVEaLlV1gENt4ME8hMtEg1yF4MIeThCQTG7LgUJke7T8zdS1D5E3ZEpabkueaWsdtaA375zvq/mqn6Y86SZgmussoqjp3WHm0Yu17BCKWK4G3yIIStD+yXR8zeCjh2YOV7JHztlxU/TAV1JVemroS0JCozg8=
