--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ sudo: false
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
 script:
 - "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && (cd powerunit-extensions-matchers
-  && mvn clean install site -Psite --settings ../target/travis/settings.xml) || (cd
+  && travis_wait 60 mvn clean install site -Psite --settings ../target/travis/settings.xml) || (cd
   powerunit-extensions-matchers && mvn clean install --settings ../target/travis/settings.xml) "
 env:
   global:
