--- a/powerunit-extensions-matchers/pom.xml
+++ b/powerunit-extensions-matchers/pom.xml
@@ -503,6 +503,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+				<configuration>
+				</configuration>
+			</plugin>
 
 		</plugins>
 		<resources>
