--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ sudo: false
 before_install: git clone -b travis `git config --get remote.origin.url` target/travis
 script:
 - "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && (cd powerunit-extensions-matchers
-  && travis_wait 60 mvn clean install site -Psite --settings ../target/travis/settings.xml) || (cd
-  powerunit-extensions-matchers && mvn clean install --settings ../target/travis/settings.xml) "
+  && travis_wait 60 mvn clean install site -Psite --settings ../target/travis/settings.xml)
+  || (cd powerunit-extensions-matchers && mvn clean install --settings ../target/travis/settings.xml) "
 after_success:
-  - (cd powerunit-extensions-matchers && mvn jacoco:report coveralls:report)
+- "(cd powerunit-extensions-matchers && mvn jacoco:report coveralls:report)"
 env:
   global:
-    secure: micrjSRaEhZIKRIkVEaLlV1gENt4ME8hMtEg1yF4MIeThCQTG7LgUJke7T8zdS1D5E3ZEpabkueaWsdtaA375zvq/mqn6Y86SZgmussoqjp3WHm0Yu17BCKWK4G3yIIStD+yXR8zeCjh2YOV7JHztlxU/TAV1JVemroS0JCozg8=
+  - secure: micrjSRaEhZIKRIkVEaLlV1gENt4ME8hMtEg1yF4MIeThCQTG7LgUJke7T8zdS1D5E3ZEpabkueaWsdtaA375zvq/mqn6Y86SZgmussoqjp3WHm0Yu17BCKWK4G3yIIStD+yXR8zeCjh2YOV7JHztlxU/TAV1JVemroS0JCozg8=
+  - secure: j9eN+/hZEB/aXZDh8ZcaV4iFb+zEtgRP8PwRydX44GKwQFMx1Qp7u2UySj3YbbuBRqLDUgdLDTGIdVhzCdm1H646pHhGnBvmHnvTXgofuVzr/QPYLMpIuPn8dc6EOoo4qvffEJX3I2hb2IQ0ELIU+1MNKztorkidA5fCeYa+uiU=
