FactoryElementVisitorTest - Add test case
* Check that a message is generate when not supported

--- a/powerunit-extensions-matchers/pom.xml
+++ b/powerunit-extensions-matchers/pom.xml
@@ -508,6 +508,7 @@
 				<artifactId>coveralls-maven-plugin</artifactId>
 				<version>4.3.0</version>
 				<configuration>
+					<serviceJobId>travis-ci</serviceJobId>
 				</configuration>
 			</plugin>
 
