--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
 after_success:
 - "(cd powerunit-extensions-matchers && mvn jacoco:report coveralls:report -DrepoToken=${repoToken})"
 - "bash <(curl -s https://codecov.io/bash)"
+- "curl https://oss.sonatype.org/service/local/repositories/releases/content/com/codacy/codacy-coverage-reporter/4.0.0/codacy-coverage-reporter-4.0.0-assembly.jar && java -jar codacy-coverage-reporter-assembly-4.0.0.jar report -l Java -r powerunit-extensions-matchers/target/site/jacoco.xml"
 env:
   global:
   - secure: micrjSRaEhZIKRIkVEaLlV1gENt4ME8hMtEg1yF4MIeThCQTG7LgUJke7T8zdS1D5E3ZEpabkueaWsdtaA375zvq/mqn6Y86SZgmussoqjp3WHm0Yu17BCKWK4G3yIIStD+yXR8zeCjh2YOV7JHztlxU/TAV1JVemroS0JCozg8=
