--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ script:
 after_success:
 - "(cd powerunit-extensions-matchers && mvn jacoco:report coveralls:report -DrepoToken=${repoToken})"
 - "bash <(curl -s https://codecov.io/bash)"
-- "curl -o codacy-coverage-reporter.jar https://oss.sonatype.org/service/local/repositories/releases/content/com/codacy/codacy-coverage-reporter/4.0.0/codacy-coverage-reporter-4.0.0-assembly.jar && java -jar codacy-coverage-reporter report -l Java -r powerunit-extensions-matchers/target/site/jacoco.xml"
+- "(cd powerunit-extensions-matchers && mvn org.apache.maven.plugins:maven-dependency-plugin:get -Dartifact=com.codacy:codacy-coverage-reporter:jar:4.0.0:jar:assembly)"
+- "(cd powerunit-extensions-matchers/target && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r site/jacoco.xml)"
 env:
   global:
   - secure: micrjSRaEhZIKRIkVEaLlV1gENt4ME8hMtEg1yF4MIeThCQTG7LgUJke7T8zdS1D5E3ZEpabkueaWsdtaA375zvq/mqn6Y86SZgmussoqjp3WHm0Yu17BCKWK4G3yIIStD+yXR8zeCjh2YOV7JHztlxU/TAV1JVemroS0JCozg8=
