--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,15 @@ language: java
 jdk:
 - oraclejdk8
 sudo: false
-before_install: git clone -b travis `git config --get remote.origin.url` target/travis
+before_install: git clone -b travis `git config --get remote.origin.url` settings/travis
 script:
-- "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && (cd powerunit-extensions-matchers
-  && travis_wait 60 mvn clean install site -Psite --settings ../target/travis/settings.xml)
-  || (cd powerunit-extensions-matchers && mvn clean install --settings ../target/travis/settings.xml) "
+- "[ ${TRAVIS_PULL_REQUEST} = 'false' -a ${TRAVIS_BRANCH} = 'master' ] && travis_wait 60 mvn clean install site -Psite --settings settings/travis/settings.xml
+  || mvn clean install --settings settings/travis/settings.xml "
 after_success:
-- "(cd powerunit-extensions-matchers && mvn jacoco:report coveralls:report -DrepoToken=${repoToken})"
+- "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
 - "bash <(curl -s https://codecov.io/bash)"
-- "(cd powerunit-extensions-matchers && mvn org.apache.maven.plugins:maven-dependency-plugin:copy -Dartifact=com.codacy:codacy-coverage-reporter:4.0.0:jar:assembly -Dtransitive)"
-- "(cd powerunit-extensions-matchers/target/dependency && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r ../site/jacoco/jacoco.xml)"
+- "mvn org.apache.maven.plugins:maven-dependency-plugin:copy -Dartifact=com.codacy:codacy-coverage-reporter:4.0.0:jar:assembly -Dtransitive"
+- "(cd target/dependency && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r ../site/jacoco/jacoco.xml)"
 env:
   global:
   - secure: micrjSRaEhZIKRIkVEaLlV1gENt4ME8hMtEg1yF4MIeThCQTG7LgUJke7T8zdS1D5E3ZEpabkueaWsdtaA375zvq/mqn6Y86SZgmussoqjp3WHm0Yu17BCKWK4G3yIIStD+yXR8zeCjh2YOV7JHztlxU/TAV1JVemroS0JCozg8=
