--- a/pom.xml
+++ b/pom.xml
@@ -665,8 +665,27 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changes-plugin</artifactId>
-				<version>2.11</version>
+				<version>2.12.1</version>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>github-report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
 			</plugin>
+		    <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-changelog-plugin</artifactId>
+		        <version>2.3</version>
+		        <reportSets>
+		        	<reportSet>
+		        		<reports>
+		        			<report>changelog</report>
+		        		</reports>
+		        	</reportSet>
+		        </reportSets>
+		    </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
