--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ after_success:
 - "mvn jacoco:merge -Djacoco.destFile=target/jacoco-aggregate.exe"
 - "mvn jacoco:report -Djacoco.dataFile=target/jacoco-aggregate.exe"
 - "(cd target/dependency && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r ../site/jacoco/jacoco.xml)"
+- "mvn site"
 deploy:
   provider: pages
   skip-cleanup: true
