--- a/pom.xml
+++ b/pom.xml
@@ -737,5 +737,12 @@
 			<version>${powerunit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+  			<groupId>com.google.code.bean-matchers</groupId>
+ 			<artifactId>bean-matchers</artifactId>
+ 			<version>0.11</version>
+ 			<scope>test</scope>
+ 			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
