--- a/pom.xml
+++ b/pom.xml
@@ -744,5 +744,12 @@
  			<scope>test</scope>
  			<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>org.exparity</groupId>
+		    <artifactId>hamcrest-date</artifactId>
+		    <version>2.0.4</version>
+		    <scope>test</scope>
+ 			<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
