--- a/pom.xml
+++ b/pom.xml
@@ -751,5 +751,12 @@
 		    <scope>test</scope>
  			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.nitorcreations</groupId>
+		    <artifactId>matchers</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+	 		<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
