--- a/pom.xml
+++ b/pom.xml
@@ -758,5 +758,12 @@
 			<scope>test</scope>
 	 		<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>com.spotify</groupId>
+		    <artifactId>hamcrest-jackson</artifactId>
+		    <version>1.1.1</version>
+		    <scope>test</scope>
+	 		<optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
