--- a/pom.xml
+++ b/pom.xml
@@ -765,5 +765,12 @@
 		    <scope>test</scope>
 	 		<optional>true</optional>
 		</dependency>
+		<dependency>
+			 <groupId>com.google.code.bean-matchers</groupId>
+			 <artifactId>bean-matchers</artifactId>
+			 <version>0.11</version>
+			 <scope>test</scope>		
+			 <optional>true</optional>
+		</dependency>
 	</dependencies>
 </project>
