--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<deploy.url>https://oss.sonatype.org/content/repositories/snapshots</deploy.url>
 		<deploy.id>oss-snapshots</deploy.id>
 		<powerunit.version>0.5.0</powerunit.version>
+		<jaxb-api.version>2.3.0</jaxb-api.version>
 	</properties>
 
 	<build>
@@ -772,5 +773,20 @@
 			 <scope>test</scope>		
 			 <optional>true</optional>
 		</dependency>
+		<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
 	</dependencies>
 </project>
