--- a/pom.xml
+++ b/pom.xml
@@ -767,12 +767,12 @@
 	 		<optional>true</optional>
 		</dependency>
 		<dependency>
-			 <groupId>com.google.code.bean-matchers</groupId>
-			 <artifactId>bean-matchers</artifactId>
-			 <version>0.11</version>
-			 <scope>test</scope>		
-			 <optional>true</optional>
-		</dependency>
+             <groupId>javax.annotation</groupId>
+             <artifactId>javax.annotation-api</artifactId>
+             <version>1.3.1</version>
+             <scope>provided</scope>
+             <optional>true</optional>
+        </dependency>
 		<dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
