--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 jdk:
 - oraclejdk8
 - oraclejdk9
+- openjdk8
 sudo: false
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
@@ -21,6 +22,7 @@ after_success:
 deploy:
   provider: pages
   skip-cleanup: true
+  keep-history: false
   github-token: $GITHUB_TOKEN
   local-dir: target/site
   on:
