Add test of the framework for java 8 and 9 (#156)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 language: java
 jdk:
 - oraclejdk8
+- oraclejdk9
+- openjdk8
 sudo: false
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
 script:
-- "mvn clean install"
+- "mvn -e clean install"
 after_success:
+- "jdk_switcher use oraclejdk8"
 - "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
-- "bash <(curl -s https://codecov.io/bash) -c -Funit"
+- "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_JDK_VERSION"
 - "mvn jacoco:report-integration"
-- "bash <(curl -s https://codecov.io/bash) -c -Fcompiler"
+- "bash <(curl -s https://codecov.io/bash) -c -Fcompiler$TRAVIS_JDK_VERSION"
 - "mvn org.apache.maven.plugins:maven-dependency-plugin:copy -Dartifact=com.codacy:codacy-coverage-reporter:4.0.0:jar:assembly -Dtransitive"
 - "mvn jacoco:merge -Djacoco.destFile=target/jacoco-aggregate.exe"
 - "mvn jacoco:report -Djacoco.dataFile=target/jacoco-aggregate.exe"
@@ -19,7 +22,9 @@ after_success:
 deploy:
   provider: pages
   skip-cleanup: true
+  keep-history: false
   github-token: $GITHUB_TOKEN
   local-dir: target/site
   on:
     branch: master
+    condition: $TRAVIS_JDK_VERSION = oraclejdk8
