--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
 		<deploy.url>https://oss.sonatype.org/content/repositories/snapshots</deploy.url>
 		<deploy.id>oss-snapshots</deploy.id>
 		<powerunit.version>0.5.0</powerunit.version>
+		<jaxb-api.version>2.3.0</jaxb-api.version>
 	</properties>
 
 	<build>
@@ -315,7 +316,7 @@
 				<configuration>
 					<excludePackageNames>ch.powerunit.extensions.matchers.factoryprocessor*:ch.powerunit.extensions.matchers.provideprocessor*:ch.powerunit.extensions.matchers.common*</excludePackageNames>
 					<docfilessubdirs>true</docfilessubdirs>
-					<linksource>true</linksource>
+					<linksource>false</linksource>
 					<links>
 						<link>http://hamcrest.org/JavaHamcrest/javadoc/1.3/</link>
 					</links>
@@ -766,11 +767,26 @@
 	 		<optional>true</optional>
 		</dependency>
 		<dependency>
-			 <groupId>com.google.code.bean-matchers</groupId>
-			 <artifactId>bean-matchers</artifactId>
-			 <version>0.11</version>
-			 <scope>test</scope>		
-			 <optional>true</optional>
-		</dependency>
+             <groupId>javax.annotation</groupId>
+             <artifactId>javax.annotation-api</artifactId>
+             <version>1.3.1</version>
+             <scope>provided</scope>
+             <optional>true</optional>
+        </dependency>
+		<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>${jaxb-api.version}</version>
+        </dependency>
 	</dependencies>
 </project>
