--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_success:
 before_deploy:
 - git config --local user.name "powerunitci"
 - git config --local user.email "powerunitci@powerunit.ch"
-- git tag "ci/$TRAVIS_JOB_NUMBER"
+- git tag "ci/$TRAVIS_BRANCH/$TRAVIS_JOB_NUMBER"
 deploy:
   - provider: pages
     skip-cleanup: true
@@ -40,6 +40,8 @@ deploy:
     file_glob: true
     file: target/*.jar
     skip_cleanup: true
+    prerelease: true
+    draft: true
     on:
       all_branches: true
       condition: $TRAVIS_JDK_VERSION = oraclejdk8
