--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
+stages:
+- name: before_deploy
+  if: env(TRAVIS_JDK_VERSION)=oraclejdk8 AND tag IS blank
 jdk:
 - oraclejdk8
 - oraclejdk9
@@ -19,12 +22,27 @@ after_success:
 - "mvn jacoco:report -Djacoco.dataFile=target/jacoco-aggregate.exe"
 - "(cd target/dependency && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r ../site/jacoco/jacoco.xml)"
 - "mvn site"
+before_deploy:
+- git config --local user.name "powerunitci"
+- git config --local user.email "powerunitci@powerunit.ch"
+- git tag "ci/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER"
 deploy:
-  provider: pages
-  skip-cleanup: true
-  keep-history: false
-  github-token: $GITHUB_TOKEN
-  local-dir: target/site
-  on:
-    branch: master
-    condition: $TRAVIS_JDK_VERSION = oraclejdk8
+  - provider: pages
+    skip-cleanup: true
+    keep-history: false
+    github-token: $GITHUB_TOKEN
+    local-dir: target/site
+    on:
+      branch: master
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    file_glob: true
+    file: target/*.jar
+    skip_cleanup: true
+    prerelease: true
+    draft: false
+    on:
+      all_branches: true
+      tags: false
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8
