--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
+stages:
+- name: before_deploy
+  if: env(TRAVIS_JDK_VERSION)=oraclejdk8 AND tag IS blank And branch=master
 jdk:
 - oraclejdk8
 - oraclejdk9
@@ -11,20 +14,35 @@ script:
 after_success:
 - "jdk_switcher use oraclejdk8"
 - "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
-- "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_OS_NAME$TRAVIS_JDK_VERSION"
+- "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_JDK_VERSION"
 - "mvn jacoco:report-integration"
-- "bash <(curl -s https://codecov.io/bash) -c -Fcompiler$TRAVIS_OS_NAME$TRAVIS_JDK_VERSION"
+- "bash <(curl -s https://codecov.io/bash) -c -Fcompiler$TRAVIS_JDK_VERSION"
 - "mvn org.apache.maven.plugins:maven-dependency-plugin:copy -Dartifact=com.codacy:codacy-coverage-reporter:4.0.0:jar:assembly -Dtransitive"
 - "mvn jacoco:merge -Djacoco.destFile=target/jacoco-aggregate.exe"
 - "mvn jacoco:report -Djacoco.dataFile=target/jacoco-aggregate.exe"
 - "(cd target/dependency && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r ../site/jacoco/jacoco.xml)"
 - "mvn site"
+before_deploy:
+- git config --local user.name "powerunitci"
+- git config --local user.email "powerunitci@powerunit.ch"
+- git tag -f "ci/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER"
 deploy:
-  provider: pages
-  skip-cleanup: true
-  keep-history: false
-  github-token: $GITHUB_TOKEN
-  local-dir: target/site
-  on:
-    branch: master
-    condition: $TRAVIS_JDK_VERSION = oraclejdk8
+  - provider: pages
+    skip-cleanup: true
+    keep-history: false
+    github-token: $GITHUB_TOKEN
+    local-dir: target/site
+    on:
+      branch: master
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    file_glob: true
+    file: target/*.jar
+    skip_cleanup: true
+    prerelease: true
+    draft: false
+    on:
+      branch: master
+      tags: false
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8
