--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,22 @@
 language: java
-jdk:
-- oraclejdk8
-- oraclejdk9
-- openjdk8
+matrix:
+ include:
+  - os: linux
+    jdk: oraclejdk8
+  - os: linux
+    jdk: oraclejdk9
+  - os: linux
+    jdk: openjdk8
+  - os: osx
+ allow_failures:
+  - os: osx
 sudo: false
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
 script:
 - "mvn -e clean install"
 after_success:
-- "jdk_switcher use oraclejdk8"
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then "jdk_switcher use oraclejdk8" ; fi
 - "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
 - "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_JDK_VERSION"
 - "mvn jacoco:report-integration"
