Align with master

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,24 @@
 language: java
-stages:
-- name: before_deploy
-  if: env(TRAVIS_JDK_VERSION)=oraclejdk8 AND tag IS blank And branch=master
-jdk:
-- oraclejdk8
-- oraclejdk9
-- openjdk8
+matrix:
+ include:
+  - os: linux
+    jdk: oraclejdk8
+  - os: linux
+    jdk: oraclejdk9
+  - os: linux
+    jdk: openjdk8
+  - os: osx
 sudo: false
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
 script:
 - "mvn -e clean install"
 after_success:
-- "jdk_switcher use oraclejdk8"
+- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then "jdk_switcher use oraclejdk8" ; fi
 - "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
-- "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_JDK_VERSION"
+- "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_OS_NAME$TRAVIS_JDK_VERSION"
 - "mvn jacoco:report-integration"
-- "bash <(curl -s https://codecov.io/bash) -c -Fcompiler$TRAVIS_JDK_VERSION"
+- "bash <(curl -s https://codecov.io/bash) -c -Fcompiler$TRAVIS_OS_NAME$TRAVIS_JDK_VERSION"
 - "mvn org.apache.maven.plugins:maven-dependency-plugin:copy -Dartifact=com.codacy:codacy-coverage-reporter:4.0.0:jar:assembly -Dtransitive"
 - "mvn jacoco:merge -Djacoco.destFile=target/jacoco-aggregate.exe"
 - "mvn jacoco:report -Djacoco.dataFile=target/jacoco-aggregate.exe"
