--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ install:
 script:
 - "mvn -e clean install"
 after_success:
+- if [[ "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "ok"; else echo "ko"; fi
+- if [[ "powerunit-extensions-matchers-0.1.1" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "ok"; else echo "ko"; fi
+- if [[ "ci/master/xxx" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "ok"; else echo "ko"; fi
 - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then "jdk_switcher use oraclejdk8" ; fi
 - "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
 - "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_OS_NAME$TRAVIS_JDK_VERSION"
