--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,6 @@ install:
 script:
 - "mvn -e clean install"
 after_success:
-- if [[ "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "ok"; else echo "ko"; fi
-- if [[ "powerunit-extensions-matchers-0.1.1" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "ok"; else echo "ko"; fi
-- if [[ "ci/master/xxx" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "ok"; else echo "ko"; fi
-- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then "jdk_switcher use oraclejdk8" ; fi
 - "mvn jacoco:report coveralls:report -DrepoToken=${repoToken}"
 - "bash <(curl -s https://codecov.io/bash) -c -Funit$TRAVIS_OS_NAME$TRAVIS_JDK_VERSION"
 - "mvn jacoco:report-integration"
@@ -30,7 +26,7 @@ after_success:
 before_deploy:
 - git config --local user.name "powerunitci"
 - git config --local user.email "powerunitci@powerunit.ch"
-- git tag -f "ci/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER"
+- if [[ "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "No tag to be created" ; else git tag -f "ci/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER"; fi
 deploy:
   - provider: pages
     skip-cleanup: true
@@ -51,3 +47,14 @@ deploy:
       branch: master
       tags: false
       condition: $TRAVIS_JDK_VERSION = oraclejdk8
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    file_glob: true
+    file: target/*.jar
+    skip_cleanup: true
+    prerelease: false
+    draft: false
+    on:
+      tags: true
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8 -a "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
+      
