--- a/.travis.yml
+++ b/.travis.yml
@@ -56,5 +56,5 @@ deploy:
     draft: false
     on:
       tags: true
-      condition: $TRAVIS_JDK_VERSION = oraclejdk8 -a "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8 && "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
       
