--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ after_success:
 before_deploy:
 - git config --local user.name "powerunitci"
 - git config --local user.email "powerunitci@powerunit.ch"
-- git tag -f "ci/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER"
+- if [[ "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9] ]]; then echo "No tag to be created" ; else git tag -f "ci/$TRAVIS_BRANCH/$TRAVIS_BUILD_NUMBER"; fi
 deploy:
   - provider: pages
     skip-cleanup: true
@@ -48,3 +48,14 @@ deploy:
       branch: master
       tags: false
       condition: $TRAVIS_JDK_VERSION = oraclejdk8
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    file_glob: true
+    file: target/*.jar
+    skip_cleanup: true
+    prerelease: false
+    draft: false
+    on:
+      tags: true
+      condition: $TRAVIS_JDK_VERSION = oraclejdk8 && "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
+      
