--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-changes-plugin</artifactId>
 					<version>2.12.1</version>
+					<configuration>
+						<issueManagementSystems>
+							<issueManagementSystem>GitHub</issueManagementSystem>
+						</issueManagementSystems>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
