--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ deploy:
     skip_cleanup: true
     prerelease: false
     draft: false
-    body: $RELEASE_NOTES
+    body: "$RELEASE_NOTES"
     on:
       tags: true
       condition: $TRAVIS_JDK_VERSION = oraclejdk8 && "$TRAVIS_TAG" =~ powerunit-extensions-matchers-[0-9].[0-9].[0-9]
