--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ after_success:
 - "(cd target/dependency && java -jar codacy-coverage-reporter-4.0.0-assembly.jar report -l Java -r ../site/jacoco/jacoco.xml)"
 - "mvn site"
 - "mvn org.apache.maven.plugins:maven-changes-plugin:announcement-generate"
-- brew install jshon
-- export RELEASE_NOTES=$(jshon -s "$(cat cat target/announcement/announcement.vm)"))
+- export RELEASE_NOTES=$(jshon -s "$(cat target/announcement/announcement.vm)")
 before_deploy:
 - git config --local user.name "powerunitci"
 - git config --local user.email "powerunitci@powerunit.ch"
