--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ matrix:
     jdk: openjdk8
   - os: osx
 sudo: false
+addons:
+    apt:
+      update: true
+before_install:
+ - sudo apt-get install jshon
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
 script:
