--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
     apt:
       update: true
 before_install:
- - if [["$TRAVIS_OS_NAME" = linux]] then sudo apt-get install jshon ; fi
+ - if [["$TRAVIS_OS_NAME" = linux]]; then sudo apt-get install jshon ; fi
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
 script:
