Add jdk for #158

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ matrix:
     jdk: oraclejdk9
   - os: linux
     jdk: openjdk8
+  - os: linux
+    jdk: oraclejdk10
+  - os: linux
+    jdk: openjdk10
+  - os: linux
+    jdk: openjdk11
   - os: osx
 sudo: false
 install:
