--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
     apt:
       update: true
 before_install:
+ - cp .travis.settings.xml $HOME/.m2/settings.xml
  - if [[ "$TRAVIS_OS_NAME" = linux ]]; then sudo apt-get install jshon ; fi
 install:
 - "mvn dependency:resolve dependency:resolve-plugins"
